--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,14 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "NODE_ENV=test jest --runInBand"
+    "test": "NODE_ENV=test jest --runInBand",
+    "lint": "eslint \"src/**/*.js\"",
+    "audit": "npm audit --audit-level=high",
+    "prepublishOnly": "npm run audit",
+    "sonar": "npx sonarscanner -Dsonar.projectKey=portal-backend -Dsonar.sources=src -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN"
   },
   "dependencies": {
+    "yargs": "^17.7.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,6 +32,7 @@
     "nodemon": "^3.0.1",
   "jest": "29.6.2",
   "supertest": "6.3.3",
-    "mongodb-memory-server": "8.12.2"
+    "mongodb-memory-server": "8.12.2",
+    "eslint": "^8.47.0"
   }
 }
