--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview --port 5173",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "test": "vitest --environment jsdom",
+    "audit": "npm audit --audit-level=high",
+    "prepublishOnly": "npm run audit"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -13,7 +17,13 @@
     "whatwg-fetch": "3.6.2"
   },
   "devDependencies": {
-  "@vitejs/plugin-react": "4.1.0",
-  "vite": "4.4.9"
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@vitejs/plugin-react": "4.1.0",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.32.2",
+    "jsdom": "^21.1.0",
+    "vite": "4.4.9",
+    "vitest": "^1.3.0"
   }
 }
