--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@5.0.0
-
+# this section was structured with assistance via co piolt
 jobs:
   backend:
     docker:
